chore: init redux repo

--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "build": "lerna run build",
-    "start": "lerna run start --stream"
+    "start": "lerna run start --stream",
+    "exec:hooks": "lerna exec --scope 'hooks'",
+    "start:hooks": "yarn exec:hooks -- yarn run start --stream",
+    "exec:redux": "lerna exec --scope 'redux'",
+    "start:redux": "yarn exec:redux -- yarn run start --stream"
   },
   "devDependencies": {
     "lerna": "^4.0.0"
