--- a/packages/redux/package.json
+++ b/packages/redux/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hooks",
+  "name": "redux",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,7 +17,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
