chore: add reducer-context package

--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
     "bootstrap": "lerna bootstrap",
     "build": "lerna run build",
     "start": "lerna run start --stream",
-    "exec:drilldown": "lerna exec --scope '@demo/drilldown'",
-    "start:drilldown": "yarn exec:drilldown -- yarn run start --stream",
-    "start:hooks": "lerna exec --scope '@demo/hooks' -- yarn run start --stream",
-    "exec:redux": "lerna exec --scope '@demo/redux'",
-    "start:redux": "yarn exec:redux -- yarn run start --stream"
+    "start:drilldown": "lerna exec --scope '@demo/drilldown' -- yarn run start --stream",
+    "start:reducer": "lerna exec --scope '@demo/hooks' -- yarn run start --stream",
+    "start:reducer-context": "lerna exec --scope '@demo/hooks' -- yarn run start --stream",
+    "start:redux": "lerna exec --scope '@demo/redux' -- yarn run start --stream"
   },
   "devDependencies": {
     "lerna": "^4.0.0"
