chore: prepare demo with "legacy" redux

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "start:reducer": "lerna exec --scope '@demo/reducer' -- yarn run start --stream",
     "start:reducer-context": "lerna exec --scope '@demo/reducer-context' -- yarn run start --stream",
     "start:redux": "lerna exec --scope '@demo/redux' -- yarn run start --stream",
-    "start:recoil": "lerna exec --scope '@demo/recoil' -- yarn run start --stream"
+    "start:recoil": "lerna exec --scope '@demo/recoil' -- yarn run start --stream",
+    "start:sandbox": "lerna exec --scope '@demo/sandbox' -- yarn run start --stream"
   },
   "devDependencies": {
     "lerna": "^4.0.0"
